@@ -4,6 +4,7 @@ Changelog for Header Tools Improved
 Switched to the WebExtension i18n locale system.
 Added Dutch locale.
 Fixed Message-Id & Message-id case detection.
+Stopped empty header generation for missing headers.
 
 4.1
 Fixed Message-ID duplication on messages from outlook.com.
